Fix svg blurriness in chrome

--- a/assets/css/0-tools/normalize.scss
+++ b/assets/css/0-tools/normalize.scss
@@ -100,6 +100,12 @@ img {
   border: 0;
 }
 
+svg {
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0) scale(1.0, 1.0);
+  transform: translateZ(0);
+}
+
 svg:not(:root) {
   overflow: hidden;
 }
